--- a/table.html
+++ b/table.html
@@ -5,14 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> periodic table of elements</title>
-    <link rel="stylesheet" href="CSS/table.css">
+    <link rel="stylesheet" href="semicss/table.css">
 </head>
 <body>
+
+    <a href="index.html">Home</a>
+
     <div class="title">
     <h1>Periodic Table of Elements</h1>
     </div>
 
-<div id="wrapper">
+    <div id="wrapper">
     <div class="red" id="container1"></div>
     <h3 id="alkali">Alkali Metal</h3>
     <div class="blue" id="container1"></div>
@@ -35,11 +38,11 @@
     <h3 id="actinide">Actinide</h3>
 
     <div class="container2"><p class="p1">1<br>1.0080</p><span>H<br>Hydrogen</span></div>
-      <h4 id="number"><u>Atomic Number</u></h4>
-      <h4 id="mass"><u>Atomic Mass</u></h4>
-      <h4 id="symbol"><u>Symbol</u></h4>
-      <h4 id="name"><u>Element Name</u></h4>
-</div>
+    <h4 id="number"><u>Atomic Number</u></h4>
+    <h4 id="mass"><u>Atomic Mass</u></h4>
+    <h4 id="symbol"><u>Symbol</u></h4>
+    <h4 id="name"><u>Element Name</u></h4>
+    </div>
     
     <table>
         <tr>
@@ -197,6 +200,6 @@
             <td><p>103<br>266.120</p><span>Lr<br>Lawrencium</span></td>
         </tr>
     </table>
-    <a href="index (3).html">Home</a>
+    
 </body>
 </html>
