--- a/index.html
+++ b/index.html
@@ -2,16 +2,23 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=0.4">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="CSS/style (3).css">
-    <title>Classy buddies</title>
+    <link rel="stylesheet" href="semicss/style.css">
+    <title>Classy Buddies</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alkatra&family=Arimo:wght@700&family=Heebo:wght@600;700&family=Inter:wght@500;600;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
   <header>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
       <div class="container">
-        <img class="mt-1 ms-1" src="imgs/logo1.png" alt="" id="logo">
+        <img class="mt-1 ms-1" src="img/logo1.png" alt="" id="logo">
         <a class="navbar-brand" href="#">Classy Buddies</a>
 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
@@ -41,66 +48,96 @@
   </nav>
   </header>
 
-<section id="Home" >
-  <div class="container-fluid tab-pane active"><br>
-    <div id="circle1"></div>
-          <div id="circle2"></div>
-          <div id="home-tname">
-            <br><br>
-            <p>WELCOME TO THE REALM OF</p>
-            <h1>CLASSY BUDDIES</h1>
+<section id="Home" class="col-12">
+  <div class="container">
+  <div class="tab-pane active"><br>
+      <div id="circle1"></div>
+      <div id="circle2"></div>
+
+     <div class="col-lg-12" id="home-tname">
+        <p>WELCOME TO THE REALM OF</p>
+        <h1 class="text">CLASSY BUDDIES</h1>
+        <div id="home-line"></div>
+     </div>
+</div>
   </div>
 </section>
 
 <!--ABOUT US-->
 <section id="about">
-  <div class="container-fluid">
-      <h3 id="au-hname">MEET OUR TEAM</h3>
-    <div class="au-line"></div>   
-
-      
-    <div class="shirlyn col-sm-3 col-6"  >
-      <h1 id="s-name">Shirlyn P. Canlom</h1>
-      <p id="s-description">
-        Hi, I'm Shirlyn P. Canlom , a first year college student currently pursuing computer
-        science at Cordova Public College I have always been fascinated by technology and its potential to change the world,
-        which is why I chose to study computer science.I am excited to learn more about programming languages,software development, 
-        and other aspects of computer science that will help me make a positive impact in the future.</p>
+  <div class="container">
+    <div class="col-12">
+      <h3 id="au-hname" class="text-center">MEET OUR TEAM</h3>
+        <div class="au-line"></div>
     </div>
 
-    
-    <div class="katrina col-sm-3 col-6">
-      <h1 id="k-name">Katrina S. Cabanag</h1>
-      <p id="k-description">Hi, I'm Katrina Cabanag, a first year college student who is 20 years old and currently 
-        pursuing computer science at Cordova Public College.I have always been fascinated by technology and its ability to solve complex problems I am excited to learn more about programming languages, 
-        software development, and artificial intelligence during my time at Cordova Public College</p>
-    </div>
+    <div class="container">
+      <div class="row">
+          <div class="col-lg-4 col-6 mt-4">
+              <img src="img/shirlyn.jpg" class="w-100 img-fluid">
+              <div class="dropdown d-flex justify-content-center">
+                <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown">
+                  Click here to know more about ourselves
+                </button>
+                <ul class="dropdown-menu">
+                  <li><span class="dropdown-item-text">Hi, I'm Shirlyn P. Canlom , a first year college student currently pursuing computer science at Cordova Public 
+                    College I have always been fascinated by technology and its potential to change the world, which is why I chose to 
+                    study computer science. I am excited to learn more about programming languages, software development, and other 
+                    aspects of computer science that will help me make a positive impact in the future. "I hope to use my knowledge 
+                    and skills in computer science to contribute to the development of innovative technologies that can make people's 
+                    lives easier and more efficient."</span></li>
+                </ul>
+                </div>
+          </div>
+          <div class="col-lg-4 col-6 mt-4">
+            <img src="img/katrina.jpg" class="w-100 img-fluid">
+            <div class="dropdown d-flex justify-content-center">
+              <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown">
+                Click here to know more about ourselves
+              </button>
+              <ul class="dropdown-menu">
+                <li><span class="dropdown-item-text">Hi, I'm Katrina Cabanag, a first year college student who is 20 years old and currently pursuing computer science at Cordova
+                  Public College. I have always been fascinated by technology and its ability to solve complex problems, which is why I chose 
+                  to pursue a degree in computer science. I am excited to learn more about programming languages, software development, and 
+                  artificial intelligence during my time at Cordova Public College</span></li>
+              </ul>
+              </div>
+        </div>
 
-    <div class="daniel col-sm-3 col-6">
-      <h1 id="d-name">Jon Daniel Cabansay</h1>
-      <p id="d-description">Hi, I'm John Daniel Cabansay  a student of computer science at Cordova Public College currently studying web development
-         and programming. I am passionate about exploring new technologies and applying them to real-world problems. In my free
-          time, I enjoy participating in hackathons and building personal projects to enhance my skills. Together with the
-           school's good teaching skills.</p>
+          <div class="col-lg-4 col-6 mt-4">
+              <img src="img/jon daniel.jpg" class="w-100 img-fluid">
+              <div class="dropdown d-flex justify-content-center">
+                <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown">
+                  Click here to know more about ourselves
+                </button>
+                <ul class="dropdown-menu">
+                  <li><span class="dropdown-item-text">Hi, I'm John Daniel Cabansay  a student of computer science at Cordova Public College currently studying web development
+                    and programming. I am passionate about exploring new technologies and applying them to real-world problems. In my free
+                     time, I enjoy participating in hackathons and building personal projects to enhance my skills. Together with the
+                      school's good teaching skills, I'm hoping to improve my skills in web development and other essential skills to
+                       improve my current self. I believe that by continuously learning and exploring new technologies.</span></li>
+                </ul>
+                </div>
+          </div>
       </div>
-   </div>   
-</div> 
+    </div> 
+  </div>
 </section>
 
 <!--ACTIVITY-->
 <section id="activities" >
-  <div class="container-fluid"><br>
-    <div class="activity1 col-4 w-10">
+  <div class="container"><br>
+    <div class="activity1">
       <h3>PERIODIC TABLE OF ELEMENTS</h3>
       <a href="table.html">click here</a>
     </div>
-    <div class="activity2 col-4 w-10">
+    <div class="activity2">
       <h3>SURVEY FORM</h3>
-      <a href="survey-form.html">click here</a>
+      <a href="survey form.html">click here</a>
     </div>
-    <div class="activity3 col-4 w-10">
-      <h3>Respondsive Activity</h3>
-      <a href="ACTVITY3.html">click here</a>
+    <div class="activity3">
+      <h3>3rd Activity</h3>
+      <a href="activity3.html">click here</a>
     </div>
   </div>
 </section>
@@ -116,53 +153,59 @@
       <button type="button" data-bs-target="#pics" data-bs-slide-to="2"></button>
       <button type="button" data-bs-target="#pics" data-bs-slide-to="3"></button>
       <button type="button" data-bs-target="#pics" data-bs-slide-to="4"></button>
+      <button type="button" data-bs-target="#pics" data-bs-slide-to="5"></button>
     </div>
 
-     <!-- shrilyn part-->
+     <!-- shirlyn part-->
   <div class="carousel-inner">
     <div class="carousel-item active">
-        <div class="imgs">
-            <img src="imgs/shirlyn1.jpg" alt="shrilyn" class="d-block">
-            <div class="carousel-caption">
-              <h1>Shirlyn P. Canlom</h1>
-              <p>change to your desire words</p>
-          </div>
-        </div>     
+      <img src="img/shirlyn.jpg" alt="Los Angeles" class="d-block" style="width:100%">
+      <div class="carousel-caption">
+        <h3>Shirlyn P. Canlom</h3>
+        <p>We had such a great time in LA!</p>
+      </div>
     </div>
+
     <div class="carousel-item">
-      <img src="imgs/Shirlyn.jpg" alt="shrilyn pic" class="d-block">
+      <img src="img/shirlyn2.jpg" alt="shrilyn pic" class="d-block">
          <div class="carousel-caption">
-           <h1>Shirlyn P. Canlom</h1>
-              <p>change to your desire words</p>        
+           <h3>Shirlyn P. Canlom</h3>
+           <p>change to your desire words</p>        
           </div>
     </div>
 
      <!--daniel part-->
     <div class="carousel-item">
-        <div class="imgs">
-            <img src="imgs/daniel1.jpg" alt="daniel pic" class="d-block">
-        </div>        
-    </div>
-    <div class="edit">
+            <img src="img/jon daniel.jpg" alt="daniel pic" class="d-block">
+           <div class="carousel-caption">
+              <h3>Jon Daniel Cabansay</h3>
+              <p>change to your desire words</p>      
+           </div>
+     </div>
+
       <div class="carousel-item">
-        <div class="imgs">
-            <img src="imgs/daniel2.jpg" alt="daniel pic" class="d-block">
-       <div class="carousel-caption">
-          <h1>Jon Daniel Cabansay</h1>
-          <p>change to your desire words</p>
-         </div>
-      </div>        
-  </div>
-    </div>      
+            <img src="img/daniel2.jpg" alt="daniel pic" class="d-block">
+           <div class="carousel-caption">
+            <h3>Jon Daniel Cabansay</h3>
+            <p>change to your desire words</p>
+           </div>
+      </div>       
+
     <!--katrina part-->
     <div class="carousel-item">
-        <div class="imgs">
-            <img src="imgs/katrina2.jpg" alt="katrina pic" class="d-block">
+            <img src="img/katrina.jpg" alt="katrina pic" class="d-block">
+          <div class="carousel-caption">
+            <h3>Katrina S. Cabanag</h3>
+            <p>Change is Constant</p>
+          </div>     
+    </div>
+
+    <div class="carousel-item">
+       <img src="img/katrina2.jpg" alt="katrina pic" class="d-block">
       <div class="carousel-caption">
-        <h1>Katrina S. Cabanag</h1>
-        <p>Change is Constant</p>
+        <h3>Katrina S. Cabanag</h3>
+         <p>Change is Constant</p>
       </div>     
-       </div>
     </div>
   </div>
 
@@ -180,19 +223,55 @@
 
 <!--CONTACT-->
 <section id="contact">
-  <div class="info col-4 w-10">
-    <h3>Katrina S. Cabanag</h3>
-    <P1>09293736020</P>
-  </div>
-  <div class="info1 col-4 w-10">
-    <h3>Shrilyn P. Canlom</h3>
-    <P1>09069024171</P>
-  </div>
-  <div class="info2 col-4 w-10">
-    <h3>Jon Daniel Cabansay</h3>
-    <p1>09327736691</p>
-  </div>
+  <div class="container"><br>
+    <div class="content1">
+      <h1>Contact <span>Us</span></h1>
+      <div class="cu-line"></div>
+      <p>If you have any suggestions regarding on this website do not hesitate to leave your information and feedbacks through signing up the form below.
+        You can also reached us through our different contact information that we provided...</p>        
+    </div>
+    <div class="content2">
+      <h2>Address</h2>
+      <p>Day-as, Cordova, Cebu <br> Lapu-lapu, City <br> Lapu-lapu, City</p>
+    </div>
+    <div class="content3">
+      <h2>Phone</h2>
+      <p>09481175533 <br> 09768839834 <br> 09389284566</p>
+    </div>
+    <div class="content4">
+      <h2>Email</h2>
+      <p>shirlyncanlom@gmail.com <br> katrinacabanag@gmail.com <br> danielcabansay@gamail.com</p>
+    </div>
+    <div>
+      <div class="home-icon ">
+        <i class="fa-solid fa-location-dot fa-2x"></i>
+      </div>
+      <div class="phone-icon">
+        <i class="fa-solid fa-phone fa-2x"></i>
+      </div>
+      <div class="email-icon">
+        <i class="fa-solid fa-envelope fa-2x"></i>
+      </div>
+      <form action="#">
+        <div class="form">
+          <label for="name" id="name">Name</label><br>
+          <input type="text" placeholder="Enter your name" class="input1">
+        </div>
+        <div class="form">
+          <label for="email" id="email">Email Address</label><br>
+          <input type="text" placeholder="Enter email" class="input1">
+        </div>
+        <div class="form pt-3">
+          <label for="feedbacks" id="feedbacks">Type your message here...</label><br>
+          <input type="text" class="input2"><br>
+        </div>
+        <div class="form">
+          <input type="submit" value="submit" class="input3">
+        </div>
+      </form>
+    </div>
+    </div>
 </section>    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
